--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://napo-100.github.io/react-portfolio",
+  "homepage": "https://michael-napolitano.com",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
